# nix-config

./: .gitignore  disko-config.nix  distrobox-setup.sh  flake.nix  result
.github/workflows/: update-claude-code.yml
agents/: external-reviewer.md  reviewer-architect.md  reviewer-newcomer.md  reviewer-perf.md  reviewer-security.md  reviewer-stylist.md  reviewer-tester.md
commands/: adr-gen.md  commit-msg.md  explain-diff.md  handover.md  multi-review.md  ralph-wiggum.md  second-opinion.md  security-review.md  test-gen.md
docs/: x86_64-linux-setup.md
docs/sandbox/: README.md
docs/superpowers/: omp-sandboxing-usage.md
docs/superpowers/plans/: 2026-05-01-pi-sandboxing.md
docs/superpowers/specs/: 2026-05-01-pi-sandboxing-design.md
docs/superpowers/spikes/: 2026-05-09-apfs-reflink.md  2026-05-09-claude-auth.md  2026-05-09-mutagen-vs-virtiofs.md
flake-modules/: compat.nix  modules.nix  per-system.nix  sandbox.nix
hosts/cullens-macbook-pro/: default.nix  homebrew-personal.nix  personal.nix
lib/: default.nix  mcp-packages.nix
modules/common/: default.nix
modules/darwin/: default.nix  homebrew-base.nix  homebrew-personal.nix  mac-defaults.nix  nix-app-trampolines.nix  nix-gc.nix
modules/home-manager/: base.nix  claude-code.nix  default.nix  dev-packages.nix  distrobox.nix  mcp-servers.nix  omp.nix  open-design.nix  pi.nix  pomp.nix  sandbox.nix  shell.nix  zwift-media.nix
modules/home-manager/dotfiles/: zshrc
modules/home-manager/mcp-servers/kagimcp/: default.nix  lock.aarch64-darwin.json  pyproject.toml
modules/home-manager/mcp-servers/serena/: default.nix  lock.aarch64-darwin.json  pyproject.toml
modules/home-manager/nixvim/: cmp.nix  conform.nix  default.nix  lsp.nix  neotree.nix  telescope.nix
modules/home-manager/nvim/: default.nix
modules/home-manager/nvim/nvim/lua/: community.lua  lazy_setup.lua
modules/home-manager/nvim/nvim/lua/plugins/: astrocore.lua  astrolsp.lua  astroui.lua  avante.lua  claude-code.lua  codecompanion.lua  copilot-chat.lua  go.lua  heirline.lua  mini-misc.lua  noice.lua  sidekick.lua  snacks.lua  telescope.lua  tokyonight.lua
modules/home-manager/omp/extensions/: footer.ts  model-memory.ts  presets.ts  safety.ts
modules/home-manager/omp/extensions/host-bridge/: index.ts  package.json
modules/home-manager/omp/extensions/permission-gate/: classifier.ts  config.ts  index.ts  package.json
modules/home-manager/omp/extensions/secret-forwarder/: config.ts  index.ts  package.json  ssh-config.ts
modules/home-manager/omp/extensions/vm-manager/: config.ts  index.ts  lima-template.yaml  mutagen-sync.ts  package.json  port-forward.ts  ssh-tools.ts  vm-lifecycle.ts
modules/home-manager/omp/themes/: tokyonight-storm.json
modules/home-manager/pi/extensions/: footer.ts  model-memory.ts  presets.ts  safety.ts
modules/home-manager/pi/themes/: tokyonight-storm.json
modules/home-manager/pomp/: bridge-handler.sh  wrapper.sh
modules/nixos/: default.nix  desktop.nix  gaming.nix  overlays.nix
modules/programs/neovim/: default.nix
modules/programs/neovim/nvim/: lazy-lock.json  lazyvim.json
modules/programs/neovim/nvim/lua/plugins/: example.lua  go.lua  mason.lua  nix.lua  treesitter.lua
pkgs/local-symphony/: go.mod
pkgs/local-symphony/cmd/local-symphony/: main.go
pkgs/local-symphony/internal/cli/: commands.go  commands_test.go
pkgs/local-symphony/internal/config/: config.go
pkgs/local-symphony/internal/db/: db.go  db_test.go  issues.go  notes.go
pkgs/local-symphony/internal/project/: detect.go
pkgs/sandbox/: .gitignore  .golangci.yml  default.nix  go.mod  go.sum  justfile
pkgs/sandbox/.flox/: env.json
pkgs/sandbox/.flox/env/: manifest.toml
pkgs/sandbox/cmd/claude-statusline/: main.go
pkgs/sandbox/cmd/sandbox/: main.go
pkgs/sandbox/cmd/sandbox-claude/: main.go
pkgs/sandbox/internal/agents/: agents.go  agents.md  agents_test.go  omp.md
pkgs/sandbox/internal/backend/: backend.go  backend_test.go  fake.go
pkgs/sandbox/internal/bridge/: handlers.go  handlers_test.go  protocol.go  protocol_test.go  server.go  server_test.go
pkgs/sandbox/internal/bridgeclient/: client.go  client_test.go
pkgs/sandbox/internal/buildinfo/: buildinfo.go  buildinfo_test.go
pkgs/sandbox/internal/cli/: app.go  bridged.go  claude.go  claude_test.go  config.go  config_test.go  destroy.go  destroy_recover_test.go  destroy_test.go  exec_unix.go  helpers_test.go  mount_cmd.go  mount_cmd_test.go  mounts.go  mounts_test.go  omp.go  omp_test.go  provisioning_constants.go  provisioning_constants_test.go  root.go  root_test.go  shell.go  shell_test.go  sshconfig.go  sshconfig_test.go  start.go  start_omp_test.go  start_provision_wiring_test.go  start_state_defer_test.go  start_test.go  start_wizard_test.go  status.go  status_test.go  stop.go  stop_test.go  vm_cmd.go  vm_cmd_test.go
pkgs/sandbox/internal/config/: load.go  load_test.go  schema.go
pkgs/sandbox/internal/lima/: exec.go  exec_test.go  lima.go  lima_test.go  provision.go  provision_test.go  template.go  template_test.go
pkgs/sandbox/internal/mutagen/: exec.go  mutagen.go  mutagen_test.go
pkgs/sandbox/internal/nixwarm/: nixwarm.go  nixwarm_test.go
pkgs/sandbox/internal/paths/: paths.go  paths_test.go
pkgs/sandbox/internal/state/: state.go  state_test.go
pkgs/sandbox/internal/vmid/: vmid.go  vmid_test.go
pkgs/sandbox/internal/wizard/: form.go  form_test.go  history.go  tui.go
scripts/: nixup.sh
skills/claude-code-config/: SKILL.md
skills/home-assistant/: SKILL.md
skills/home-assistant/scripts/: ha_call_service.py  ha_get_automations.py  ha_get_config.py  ha_get_config_entries.py  ha_get_entities.py  ha_get_services.py  ha_get_state.py  ha_get_trace.py  ha_list_traces.py  ha_search_dashboards.py  ha_search_similar_entities.py  ha_trace_summary.py
skills/llm-orchestrator/: SKILL.md
skills/llm-orchestrator/scripts/: assess_complexity.py  discover_llm_clis.py  enhance_prompt.py
systems/nixos/: desktop.nix  test-vm.nix
systems/personal/: default.nix
systems/work/: claude-code.nix
